--- a/source/_docs/patterns/05-sites/hazwaste/hazwaste.scss
+++ b/source/_docs/patterns/05-sites/hazwaste/hazwaste.scss
@@ -27,7 +27,7 @@
   margin: 0;
   box-shadow: none;
 }
-.paragraphs-actions &amp;amp;amp;amp;amp;amp;amp;amp;gt; .button + .paragraphs-dropdown {
+.paragraphs-actions .button + .paragraphs-dropdown {
   margin-left: var(--space--xl);
 }
 #edit-group-attestations {
